<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ru.maryonegames.android.aliasgame.Main8Activity">

    <TextView
        android:id="@+id/win_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="32sp"
        android:gravity="center"
        android:textColor="#FF9B05"
        android:text="TextView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="32sp"
        android:gravity="center"
        android:textColor="#05386C"
        android:text="@string/cong" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="32sp"
        android:gravity="center"
        android:textColor="#05386C"
        android:text="@string/score" />

    <TextView
        android:id="@+id/count_txt_win"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="32sp"
        android:gravity="center"
        android:textColor="#FF9B05"
        android:text="TextView" />

    <Button
        android:id="@+id/home_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="nextactvity"
        android:text="@string/on_main"
        style="@style/ButtonStyle"
        />

</LinearLayout>
